Fix (?) extra space

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ h1 {
 
 body {
 	font-family: 'Open Sans', sans-serif;
-	height: 100%;
+	/*height: 100%;*/
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
